--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <table>
+        <table border="1px" width="100%">
 
             <thead>
                 <tr>
@@ -21,7 +21,27 @@
                     <th>Price</th>
                 </tr>
             </thead>
+            <tbody>
+                <tr>
+                    <td>Pepperoni</td>
+                    <td>Pepperoni, Mozza Cheese</td>
+                    <td>$18.99</td>
+                </tr>
+
+                <tr>
+                    <td>Meat Lovers</td>
+                    <td>Pepperoni, Italian Sausage, Ham, Bacon, Salami</td>
+                    <td>$21.99</td>
+                </tr>
+
+                <tr>
+                    <td>Hawaiian</td>
+                    <td>Ham and Pineapple</td>
+                    <td>$16.99</td>
+                </tr>
+            </tbody>
         </table>
+
 
     </main>
 
