--- a/index.html
+++ b/index.html
@@ -9,70 +9,34 @@
     <meta name="author" content="Strider Kingg">
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
 
-    <body>
-        <header>
-            <h1>Best Pizza Ever!</h1>
-            <h3>Come and get some good ol' fashioned pizza lovin'</h3>
-        </header>
+    <link rel="stylesheet" href="./css/style.css" />
 
-        <main>
+</head>
 
-            <section>
-                <audio id="mymuse" width="600" autoplay>
+<body>
+    <header>
+        <h1>Best Pizza Ever!</h1>
+        <h3>Come and get some good ol' fashioned pizza lovin'</h3>
+    </header>
+
+    <main>
+
+        <section>
+            <audio id="mymuse" width="600" autoplay>
                     <source src="https://www.musixmatch.com/lyrics/Mag-44-feat-Trinah-Chord-14/Good" type="audio/mp3">
                 </audio>
-            </section>
-
-            <section id="contact-form">
-                <h2>Place Order</h2>
-                <form method="POST" action="place-order.php">
-                    <h4>Delivery</h4>
-                    <input name="deliveryMethod" type="radio" value="delivery" /> Delivery <br />
-                    <input name="deliveryMethod" type="radio" value="pickup" /> Pickup <br />
+        </section>
 
 
 
-                    <input name="address1" placeholder="Address Line 1" class="lg-input" /><br />
-                    <input name="address1" placeholder="Address Line 2" class="lg-input" /><br />
+        <footer>
+            <centre>
+                &copy; 2020 <br />
+                <a href="#">Terms of Service</a>
+            </centre>
+        </footer cen>
+    </main>
+</body>
 
-
-                    <input name="city" placeholder="City" class="sm-input" />
-                    <input name="state" placeholder="State" class="sm-input" /><br />
-                    <input name="zip" placeholder="Zip Code" class="sm-input" />
-                    <br />
-                    <br />
-
-                    <h4>Size</h4>
-                    <select name="size">
-<option value="12">12" - $13.99</option>
-<option value="16">16" - $16.99</option>
-<option value="18">18" - $19.99</option>
-<option value="72">72" - $149.99</option>
-</select>
-
-
-                    <h4>Ingredients</h4>
-                    <input name="ingredient" type="checkbox" value="pepperoni" /> Pepperoni <br />
-                    <input name="ingredient" type="checkbox" value="salami" /> Salami <br />
-                    <input name="ingredient" type="checkbox" value="bacon" /> Bacon <br />
-                    <input name="ingredient" type="checkbox" value="sausage" /> Italian Sausage <br />
-                    <input name="ingredient" type="checkbox" value="onion" /> Onions <br />
-                    <input name="ingredient" type="checkbox" value="peppers" /> Green Peppers <br />
-
-                    <br /><br />
-                    <button type="submit">Place Order</button>
-                </form>
-            </section>
-
-
-            <footer>
-                <centre>
-                    &copy; 2020<br />
-                    <a href="#">Terms of Service</a>
-                </centre>
-            </footer>
-        </main>
-    </body>
-</head>
 
 </html>
