--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 &copy; 2020 <br />
                 <a href="#">Terms of Service</a>
             </centre>
-        </footer cen>
+        </footer>
     </main>
 </body>
 
