--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html>
+<!--Still trying to figure out why the css isn't affecting the appeareance---->
 
 <head>
     <title>Zaggie's!</title>
     <meta charset="UTF-8">
     <meta name="description" content="This page is my learning curve on html">
+    <meta name="keywords" content="html5, udemy, learn code">
 
     <meta name="author" content="Strider Kingg">
-    <meta name="viewport" content="width-device-width, initial-scale-1.0">
+    <meta name="viewport" content="width-device-width">
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../Udemy course Code/style.css" />
 
 </head>
 
 <body>
-    <header>
-        <h1>Best Pizza Ever!</h1>
-        <h3>Come and get some good ol' fashioned pizza lovin'</h3>
+    <header id="main-header">
+        <h1>Best News Ever!</h1>
+
     </header>
 
-    <main>
-
-        <section>
-            <audio id="mymuse" width="600" autoplay>
-                    <source src="https://www.musixmatch.com/lyrics/Mag-44-feat-Trinah-Chord-14/Good" type="audio/mp3">
-                </audio>
-        </section>
 
 
 
-        <footer>
-            <centre>
-                &copy; 2020 <br />
-                <a href="#">Terms of Service</a>
-            </centre>
-        </footer>
+    <footer>
+        <centre>
+            &copy; 2020 <br />
+            <a href="#">Terms of Service</a>
+        </centre>
+    </footer>
     </main>
 </body>
 
